@@ -390,6 +390,8 @@ def loadPolicy(recipeObj):
 
     # Load pluggable policy
     for policyDir in recipeObj.cfg.policyDirs:
+        if not os.path.isdir(policyDir):
+            continue
         for filename in os.listdir(policyDir):
             fullpath = os.sep.join((policyDir, filename))
             if not filename.endswith('.py') or not util.isregular(fullpath):
